--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div class="section-content">
             <center>
                 <h2>Resume</h2>
-                <a href=""C:\Users\slab\Downloads\New folder\Jayanth_R_Professional_Resume (1).docx"" target="_blank" class="download-button">Download CV</a>
+                <a href="Jayanth_Resume.docx" target="_blank" class="download-button">Download CV</a>
             </center>
         </div>
     </section>
